[tool.poetry]
name = "rpg-tracker"
version = "0.1.0"
description = "A Python application for RPG campaign tracking."
authors = ["DawidKahla <dawid.kahla@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Kivy = "2.3.0"
kivymd = "1.2.0"
SQLAlchemy = "^2.0.36"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
