[tool.poetry]
name = "rpg-tracker"
version = "0.1.0"
description = "A Python application for RPG campaign tracking."
authors = ["DawidKahla <dawid.kahla@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Kivy = "2.3.0"
kivymd = "2.0.1.dev0"
SQLAlchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.13.0"
kivy = "^2.3.0"
pytest-kivy = "^0.1.0.dev2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]